# metadata-library

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPING.md  Dockerfile  LICENSE.md  README.md  app.py  docker-compose.yml  gitlab-ci.Dockerfile  manage.py  pyproject.toml  requirements.txt  setup.py
.gitlab/issue_templates/: release.md
bas_metadata_library/: __init__.py
bas_metadata_library/schemas/src/: iec_pas_61174_0_v1.json  iso_19115_1_v1.json  iso_19115_1_v2.json  iso_19115_2_v1.json
bas_metadata_library/schemas/xsd/: rtz_1_2.xsd
bas_metadata_library/standards/iec_pas_61174_0_v1/: __init__.py
bas_metadata_library/standards/iec_pas_61174_1_v1/: __init__.py
bas_metadata_library/standards/iec_pas_61174_common/: utils.py
bas_metadata_library/standards/iso_19115_1/: __init__.py
bas_metadata_library/standards/iso_19115_1_v1/: __init__.py
bas_metadata_library/standards/iso_19115_1_v1/profiles/: inspire_v1_3.py  uk_pdc_discovery_v1.py
bas_metadata_library/standards/iso_19115_2/: __init__.py
bas_metadata_library/standards/iso_19115_2_v1/: __init__.py
bas_metadata_library/standards/iso_19115_2_v1/profiles/: inspire_v1_3.py  uk_pdc_discovery_v1.py
bas_metadata_library/standards/iso_19115_common/: __init__.py  base_elements.py  common_elements.py  data_distribution_elements.py  data_identification_elements.py  data_quality_elements.py  root_element.py  utils.py
bas_metadata_library/standards/iso_19115_v1/: __init__.py  metadata-record-schema.json
bas_metadata_library/standards/iso_19115_v1/profiles/: inspire.py  inspire_v1_3.py  uk_pdc_discovery_v1.py
bas_metadata_library/standards_schemas/iso_19115_1_v1/: configuration-schema.json
bas_metadata_library/standards_schemas/iso_19115_2_v1/: configuration-schema.json
bas_metadata_library/standards_schemas/iso_19115_v1/: configuration-schema.json
docs/: dev.md  implementation.md  usage.md
provisioning/terraform/: .terraform.lock.hcl  00-terraform.tf  02-providers.tf  docker-compose.yml  terraform.tf
resources/: metadata-record-schema.json
resources/schemas/: metadata-record-schema.json
resources/schemas/standards/iso_19115_v1/: iso-19115-v1-metadata-record-schema.json
src/bas_metadata_library/: __init__.py
src/bas_metadata_library/schemas/src/: iec_pas_61174_0_v1.json  iec_pas_61174_1_v1.json  iso_19115_0_v4.json  iso_19115_1_v1.json  iso_19115_1_v2.json  iso_19115_1_v3.json  iso_19115_2_v1.json  iso_19115_2_v2.json  iso_19115_2_v3.json  iso_19115_2_v4.json  magic_administration_content_v1.json  magic_administration_encoding_v1.json  magic_discovery_v1.json  magic_discovery_v2.json
src/bas_metadata_library/standards/iec_pas_61174_0_v1/: __init__.py
src/bas_metadata_library/standards/iec_pas_61174_1_v1/: __init__.py
src/bas_metadata_library/standards/iec_pas_61174_common/: utils.py
src/bas_metadata_library/standards/iso_19115_0/: __init__.py
src/bas_metadata_library/standards/iso_19115_1/: __init__.py
src/bas_metadata_library/standards/iso_19115_2/: __init__.py
src/bas_metadata_library/standards/iso_19115_common/: __init__.py  base_elements.py  common_elements.py  data_distribution_elements.py  data_identification_elements.py  data_quality_elements.py  root_element.py  utils.py
support/gitlab/: Dockerfile  docker-compose.yml
support/provisioning/terraform/: 50-iam.tf
support/python-packaging/: parse_version.py
tasks/: release.py
tests/: app.py  config.py  conftest.py  test_app.py  test_base.py  test_metadata_standard_iso19115.py  test_metadata_standard_test_standard.py
tests/bas_metadata_library/: standard_iso_19115_1_common.py  standard_iso_19115_1_v1_common.py  standard_iso_19115_v1_common.py  test_app.py  test_base_framework.py  test_standard_iec_pas_61174_0.py  test_standard_iec_pas_61174_1.py  test_standard_iso_19115_1.py  test_standard_iso_19115_1_v1.py  test_standard_iso_19115_2.py  test_standard_iso_19115_2_v1.py  test_standard_iso_19115_v1.py  test_standard_test_standard.py
tests/bas_metadata_library_tests/: standard_iso_19115_1_common.py  standard_iso_19115_common.py  test_app.py  test_base_framework.py  test_configuration_schemas.py  test_profile_magic_administration_v1.py  test_profile_magic_discovery_v1.py  test_profile_magic_discovery_v2.py  test_standard_iec_pas_61174_0.py  test_standard_iec_pas_61174_1.py  test_standard_iso_19115_0.py  test_standard_iso_19115_1.py  test_standard_iso_19115_2.py  test_standard_test_standard.py
tests/resources/configs/: iec_pas_61174_0_standard.py  iec_pas_61174_0_standard_minimal_record_v1.json  iec_pas_61174_1_standard.py  iso19115_0_standard.py  iso19115_1_standard.py  iso19115_1_standard_minimal_record_v1.json  iso19115_1_standard_minimal_record_v2.json  iso19115_1_v1_standard.py  iso19115_2_standard.py  iso19115_2_v1_standard.py  iso19115_v1_1_standard.py  iso19115_v1_standard.py  magic_administration_profile.py  magic_discovery_profile.py  test_metadata_standard.py  test_metadata_standard_minimal_record.json
tests/resources/configs/iec-pas-61174-0/: complete_v1.json  minimal_v1.json
tests/resources/configs/iec-pas-61174-1/: complete_v1.json  minimal_v1.json
tests/resources/configs/iso-19115-0/: base-complex_v4.json  base-simple_v4.json  complete_v4.json  minimal_v4.json
tests/resources/configs/iso-19115-1/: base-complex_v2.json  base-complex_v3.json  base-simple_v2.json  base-simple_v3.json  complete_v2.json  complete_v3.json  minimal_v2.json  minimal_v3.json
tests/resources/configs/iso-19115-2/: base-complex_v2.json  base-complex_v3.json  base-complex_v4.json  base-simple_v2.json  base-simple_v3.json  (+7 more)
tests/resources/keys/: __init__.py
tests/resources/records/: .editorconfig
tests/schemas/: test_standard_v1.json
tests/standards/test_standard/: __init__.py  metadata-record-schema.json
tests/standards_schemas/test_standard_v1/: configuration-schema.json
uk_pdc_metadata_record_generator/: __init__.py
uk_pdc_metadata_record_generator/standards/iso19115/: __init__.py
uk_pdc_metadata_record_generator/standards/iso_19115_v1/: __init__.py
(+169 files in other folders)
