[project]
name = "bas-metadata-library"
version = "0.15.3"
license = "MIT"
description = "Python library for generating metadata records"
authors = [
  { name = "Felix Fennell", email = "felnne@bas.ac.uk" },
  { name = "Luke McDonald", email = "ludona@bas.ac.uk" },
  { name = "Jason White", email = "jasite@bas.ac.uk" },
  { name = "Paul Breen", email = "pbree@bas.ac.uk" }
]
readme = "README.md"
homepage = "https://github.com/antarctica/metadata-library"
repository = "https://github.com/antarctica/metadata-library"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries"
requires-python = ">=3.9"
dependencies = [
  "importlib-resources>=6.5.2", # python-version backport
  "jsonschema>=4.25.1",
  "lxml>=6.0.2",
  "rfc3987>=1.3.8", # jsonschema indirect dependency
  "strict-rfc3339>=0.7", # jsonschema indirect dependency # backport for Python < 3.10
]

[dependency-groups]
dev = [
    "jsonref>=1.1.0",
    "ruff>=0.14.6",
    "safety>=3.7.0",
]

test = [
    "flask>=3.1.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-random-order>=1.2.0",
]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py39"
# tests/bas_metadata_library_tests/* excluded as too much effort to retrofit and largely unnecessary (stylistic)
extend-exclude = ["tests/bas_metadata_library_tests"]

[tool.ruff.lint]
select = ["A", "ANN", "B", "B9", "C90", "C4", "D", "DTZ", "E", "EM", "ERA", "F", "FA", "I", "N", "PT", "PTH", "RET", "RUF", "S", "SIM", "TD", "TRY", "UP", "W"]
#   A | builtins (variables named after builtin names)
# ANN | annotations (type hints)
#   B | bug-bear (bad code)
#  B9 | bug-bear opinionated (additional bad code)
# C90 | mccabe (code complexity)
#  C4 | comprehensions (list/dict/set comprehensions)
#   D | pydocstyle (docstring)
# DTZ | datetimez (date/time)
#   E | pycodestyle errors (PEP8)
#  EM | errmsg (exceptions)
# ERA | eraticate (comments)
#   F | pyflakes (invalid/bad code)
#  FA | uture-annotations (type hints)
#   I | isort (import ordering)
#   N | pep8-naming (PEP8)
#  PT | pytest-style (tests)
# PTH | use-pathlib (old syntax)
# RET | return (return statements)
# RUF | ruff (other)
#   S | bandit (static security)
# SIM | simplicity (code complexity)
#  TD | todos (comments)
# TRY | tryceratops (exceptions)
#  UP | pyupgrade (old syntax)
#   W | pycodestyle warnings (PEP8)

ignore = ["ANN101", "ANN204", "D100", "D101", "D102", "D104", "D107", "D203", "D212", "D401", "D402", "E501", "TD002"]
# ANN101 | ignore missing self type (can't be used in Python 3.9)
# ANN204 | ignore docstring for magic methods (unecessary)
#   D100 | for avoding module level docstrings (unecessary)
#   D101 | for avoiding class level docstrings (too much effort to retrofit and largely unnecessary)
#   D102 | for avoiding public function level docstrings (too much effort to retrofit and largely unnecessary)
#   D104 | for avoding package level docstrings (unecessary)
#   D203 | for requring blank line before classes (which looks silly)
#   D212 | for docstring requring multi-line comments to start on first line (which looks silly)
#   D401 | for docstring being in interpretive mood (which sometimes isn't correctly determined)
#   D402 | for docstring that can't resemble their signatures (despite them being completely different)
#   E501 | for bug-bear compatibility (as B905 overrides line length checks)
#  TD002 | for allowing TODOs without an author (as an issue should assign ownership)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN201", "S101"]
#   tests/* | ANN201 | ignore missing type annotations from test functions
#   tests/* |   S101 | ignore use of assert

[tool.pytest.ini_options]
addopts = "--strict-markers --random-order -x --ff"
# --strict-markers | fail if unknown markers are used
# --random-order   | run tests in random order
# -x               | stop after first failure [Overriden in CI]
# --ff             | run failed tests first
markers = [
  "cov: coverage checks (deselect with '-m \"not cov\"')"
]

[tool.coverage.report]
skip_empty = true
show_missing = false
fail_under = 95  # lowered because we didn't initially consider branching, which would take significant effort to retrofit

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.run]
branch = true
source = ["src"]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
